--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/clebermsb/video-maker/issues"
   },
-  "homepage": "https://github.com/clebermsb/video-maker#readme"
+  "homepage": "https://github.com/clebermsb/video-maker#readme",
+  "dependencies": {
+    "readline-sync": "^1.4.9"
+  }
 }
